--- a/.github/workflows/Actions.yml
+++ b/.github/workflows/Actions.yml
@@ -29,4 +29,5 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - run: npm run test-with-coverage"
+    - run: npm run test-with-coverage
+ 
