--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "test": "mocha --timeout 20000",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf lib && tsc",
     "test-with-coverage": "nyc --reporter=text --reporter=html  mocha --timeout 20000"
   },
   "keywords": [
