--- a/browserTest/package.json
+++ b/browserTest/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=development"
+    "build": "webpack --mode=development",
+    "start": "npm run build && live-server dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethereumeip712signature2021suite": "../",
+    "ethereumeip712signature2021suite": "file:..",
     "jsonld-signatures": "^9.3.0",
     "web3": "^1.9.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "live-server": "^1.2.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.1",
