--- a/.github/workflows/Actions.yml
+++ b/.github/workflows/Actions.yml
@@ -29,5 +29,9 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - run: npm run test-with-coverage
+    - run: npm run coverage
+    - name: Set code coverage commit status 📫
+      run: npx -p check-code-coverage set-gh-status
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
