--- a/.github/workflows/Actions.yml
+++ b/.github/workflows/Actions.yml
@@ -31,8 +31,15 @@ jobs:
     - run: npm test
     - run: npm run coverage
     - name: Set code coverage commit status 📫
-      run: npx -p check-code-coverage set-gh-status
+      run: node bin/set-gh-status
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Check coverage change from README 📫
+      run: node bin/set-gh-status --check-against-readme
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Update code coverage badge 🥇
+      run: node bin/update-badge
 
  
