--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "test": "nyc --reporter=text --no-clean mocha --timeout 20000",
-    "coverage": "nyc report --reporter=lcov --reporter=json-summary  --report-dir coverage"
+    "coverage": "nyc report --reporter=lcov --reporter=json-summary  --report-dir coverage",
+    "check-coverage":"update-badge"
   },
   "keywords": [
     "eip712",
