--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "EthereumEip712Signature2021   (https://w3c-ccg.github.io/ethereum-eip712-signature-2021-spec)",
   "main": "lib/src/index.js",
   "scripts": {
-    "build": "rimraf lib && tsc",
+    "build": "rimraf lib && tsc --build",
     "test": "nyc --reporter=text --no-clean mocha --timeout 20000",
     "coverage": "nyc report --reporter=lcov --reporter=json-summary  --report-dir coverage",
     "check-coverage":"update-badge"
