--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "EthereumEip712Signature2021   (https://w3c-ccg.github.io/ethereum-eip712-signature-2021-spec)",
   "main": "lib/src/index.js",
+  "type":"module",
   "scripts": {
     "build": "rimraf lib && tsc --build",
     "test": "nyc --reporter=text --no-clean mocha --timeout 20000",
