--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,8 +49,8 @@
       // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
   
       /* Emit */
-    //   "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-    //   "declarationMap": true /* Create sourcemaps for d.ts files. */,
+       "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
+       "declarationMap": true /* Create sourcemaps for d.ts files. */,
       // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
       // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
       // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
@@ -72,7 +72,6 @@
       // "preserveConstEnums": true,                       /* Disable erasing 'const enum' declarations in generated code. */
       // "declarationDir": "./",                           /* Specify the output directory for generated declaration files. */
       // "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
-  
       /* Interop Constraints */
       // "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
       // "verbatimModuleSyntax": true,                     /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */
