--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "web3": "1.9.0"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.1",
-    "chai": "^4.3.7",
-    "check-code-coverage": "^1.10.4",
-    "coveralls": "^3.1.1",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "rimraf": "^5.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "@types/mocha": "10.0.1",
+    "chai": "4.3.7",
+    "check-code-coverage": "1.10.4",
+    "coveralls": "3.1.1",
+    "mocha": "10.2.0",
+    "nyc": "15.1.0",
+    "rimraf": "5.0.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.4"
   }
 }
